Fix centering by adding even whitespace

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -996,6 +996,10 @@ video {
   width: 12rem;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1230,6 +1234,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-x-1 {
